<resources>
    <string name="app_name">appenify</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="agree_and_continue">Agree and Continue</string>
	<string name="terms_and_conditions">Terms and Conditions</string>
	<string name="private_policy">Private Policy</string>
	<string name="profile_name">Davinder Singh</string>
	<string name="profile_email">davinder.singh@outlook.com</string>
	<string name="event_nearby">Events Nearby</string>
	<string name="delete">Delete</string>
	<string name="wedding">Wedding</string>
	<string name="sat">SAT</string>
	<string name="bachelorette_party">Bachelorette Party</string>
	<string  name="all_white_outlets">All-White Outlets</string>
	<string name="message">Message</string>
	<string name="event_not_yet">Your selected Event Type is not yet</string>
	<string name="miles">Miles</string>
	<string name="kilometers">Kilometers</string>
	<string name="distance_unit">Distance Unit</string>
	<string name="search_distance_unit">SearchDistance Radius</string>
	<string name="search_dista">10 Km</string>
	<string name="hype_when">Hype when i check-in at event</string>
	<string name="notify_new">Notify when new invitation</string>
	<string name="notify_new_nearby">Notify new nearby events</string>
	<string name="party_meeting_weeding">Party, Meeting, Wedding</string>
	<string name="fav_ev_loccc">Noida, India : Banglore India</string>
	<string name="fav_ev_loccc_head">Favorite event locations</string>
	<string name="send_feed">Send us feedback / comments</string>
	<string name="event_user_name">Alexandra Nite Club,London</string>
	<string name="iwont">I won\'t be at this event</string>
	<string name="iwillbeat">I\'ll be at this event</string>
	<string name="not_logged_in">You are not Logged In</string>
	<string name="login">Login</string>
	<string name="event_attending">Events I\'m Attending</string>
	<string name="add_desc">Add Description</string>
	<string name="hey_whats_good">Hey, whats good! The passcode you entered dosen\'t match</string>
	<string name="didnt_received">Didn\'t received your Passcode yet ?</string>
	<string name="wont_be">I won\'t be at this event</string>
	<string name="favorite_event_locations">Favorite Event Locations</string>
	<string name="Enter_city">Enter city</string>
	<string name="Add_to_Favorite_locations">Add to Favorite Locations</string>
	<string name="Today">Today</string>
	<string name="CurrentLocation">Current Location</string>
	<string name="BestMatch">Best Match</string>
	<string name="Favorites">Favorites</string>
	<string name="enter_search">Enter search text</string>
	<string name="km_miles">1Km(0.6Miles)</string>
	<string name="connect_your">Connect your Appenify profile to your social media accounts and openup even more oppurtunities to what\'s happening around you and your social network</string>
<string name="Delhi_india">Delhi,India</string>
	<string name="Check_In_at">Check-In at this event and let the organizer know you\'re here</string>
	<string name="Check_In">Check-In</string>
	<string name="app_id">668572803249750</string>
	<string name="verify_phone_number">Verify Phone Number</string>
	<string name="verify_number_SMS">To verify your phone number,Appenify needs to send a one time passcode to your phone number via SMS message </string>
	<string name="verify_please_to">Please select to your country code and enter your phone number</string>
	<string name="default_country_code">United State</string>
	<string name="country_code">+1</string>
	<string name="ok">Ok</string>
	<string name="photos">Photos</string>
	<string name="video">Video</string>
	<string name="media_gallery">Media Gallery</string>
	<string name="tap_to_add_photos">Tap to add more photos and videos</string>
	<string name="event_detail_title">Jane Miles &amp; Subharmanyan Kumar Wedding</string>
	<string name="date_year">18 JUN\n2014</string>
	<string name="hoursStr">21:00</string>
	<string name="lorem_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolorel ut aliquip ex ea commodo conseet iusto odio dignissim qui blandit praesent lup ta tum zzril delenit augue duis dolore te feugait nulla facilisi.</string>
	<string name="add_to_fav">Add to favorites</string>
	<string name="check_in_if">Please Check-In if you have arrived at the Event</string>
	<string name="event_nnme">Jill Wagner Weds Subramaniam Jafar</string>
	<string name="setings">Settings</string>
	<string name="profile">Profile</string>
	<string name="preferences">Preferences</string>
	<string name="username">Alice Smith</string>
	<string name="email">alice365@gmail.com</string>
	<string name="address">Chandigarh, India</string>
	<string name="phoneno">+91 9876543210</string>
	<string name="date">31 May</string>
	<string name="sex">Female</string>
	<string name="titleof_your">Title of your event</string>
	<string name="create_event">Create Event</string>
	<string name="title_is_required">Title is required</string>
	<string name="event_category">Event Category</string>
	<string name="event_type">Event Type</string>
	<string name="event_theme">Event Theme</string>
	<string name="event_start">Event Starts</string>
	<string name="event_start_date">SAT, 03 OCT 2014 21:45</string>
	<string name="event_ends">Event Ends</string>
	<string name="event_end_date">SAT, 04 OCT 2014 00:45</string>
	<string name="event_desc">Add Description</string>
	<string name="event_venue">Event Venue</string>
	<string name="add_photo_videos">Add Photos and Videos</string>
	<string name="add_photo_videos1">Add Photos &amp; Videos</string>
	<string name="everyone_welcome">Everyone is welcome to this event</string>
	<string name="purchased_tickets">This event require purchased tickets</string>
	<string name="invite_guest">Invite Guest</string>
	<string name="search">Search</string>
	<string name="exclusive_only">Event is exclusive to invited guests only</string>
	<string name="grand_place">The Grand Palace Arena 5th Street, New York 21200,USA</string>
	<string name="set_time">Set Time</string>
	<string name="everyone_is_welcome">Everyone is welcome to this event</string>
	<string name="this_event_required">This event required purchased tickets</string>
	<string name="pop_up">ViewPhoneNoPopUp</string>
    <string name="pop_up_social">ViewSocialConnectPopUp</string>
    <string name="confirm_no">Confirm Phone Number</string>
    <string name="correct_no">Your Correct Phone Number is</string>
    <string name="phone_no">+91-9646692195</string>
    <string name="edit">Edit</string>
    <string name="edit_event">Edit Event</string>
    <string name="contnue">Continue</string>
    <string name="socialConnect_popup_text1">Appenify is a whole lot more fun with \n your
        social networks and allows you \n great stuff! \n\n Are you sure you want to \n skip this step?</string>
    <string name="yes">Yes</string>
    <string name="ok_let_me_connect">ok,let me Connect</string>
    <string name="title_activity_share_with_friends">ShareWithFriendsActivity</string>
   <string name="share_with_friends">Share with Friends</string>
   <string name="you_are_almost_done">Your are almost done!</string>
 <string name="share_appenify_with">Share Appenify with your friends and get the \n events started!</string>
     <string name="skip_this_step">Skip this Step</string>
     <string name="share_continue">Share &amp; Continue</string>
     <string name="enter_passcode">Enter Passcode  </string>
	<string name="enter_6digit_passcode">Enter the 6-Digit one time password sent to your phone via sms text message. </string>
	 <string name="verify_passcode">Verify Passcode</string>
	 <string name="resend_passcode">Resend Passcode</string>
	 <string name="social_connect">Social Connect</string>
	 <string name="my_social_networs">My Social Networks</string>
	<string name="facebook">Facebook</string>
	<string name="twitter">Twitter</string>
	<string name="linkedin">LinkedIn</string>
	<string name="google_plus">Google +</string>
	<string name="ok_let_me">Ok, Let me Connect</string>
	<string name="i_like_this_event">I like this Event</string>
	<string name="will_this_event">I will be at this event</string>
	<string name="fav_event_cat">Favorite Events Category</string>
	<string name="meeting">Meeting</string>
	<string name="my_favorites">My Favorites</string>
	<string name="eight">8</string>
	<string name="three">3</string>
	<string name="twelve">12</string>
	<string name="favs">Faves</string>
	<string name="organized">Organized</string>
	<string name="pending">Pending</string>
	 <string name="exception">Exception: %1$s</string>
    <string name="ok_button">OK</string>
    <string name="need_perms_alert_text">In order to pick your friends you need to accept all the permissions on the following page.</string>
    <string name="need_perms_alert_button_ok">OK</string>
    <string name="need_perms_alert_button_quit">Quit</string>
	  <string name="map_title">The Grand Palace Arena</string>
    <string name="map_location">The Grand Palace Arena
        25th Street, New York
        21200, USA</string>
    <string name="car_time">1 hour 32 mins</string>
    <string name="more">More...</string>
    <string name="map">Map</string>
    <string name="satelite">Satellite</string>
    <string name="earth">Earth</string>
    <string name="distance">Distance Radius</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
	<string name="username_comment">Jhony Smith</string>
	<string name="comment_event_title">Jill wagner Weds Subramaniyam Jafar</string>
	<string name="cancel">Cancel</string>
	<string name="text_limit">300 characters remaining</string>
	<string name="close">Close</string>
	<string name="add_comment">Add Comment</string>
	 <string name="no">No</string>
	 <string name="streettt">Street</string>
	 <string name="cityy">City</string>
	 <string name="statee">State</string>
	<string name="countryy">Country</string>
	<string name="locationnn">Location</string>
      <string name="sports">Sports</string>
       <string name="party">Party</string>
     <string name="music_artt">Music / Art</string>
       <string name="festival">Festival</string>
           <string name="meet_up">Meet-up</string>
            <string name="outdoors">Outdoors</string>
             <string name="others">Others</string>
             <string name="choose_event_type">Choose your event type</string>
             <string name="julyparty">4 July Party</string>
             <string name="after_party">After Party</string>
             <string name="anniversary_party">Anniversary Party</string>
             <string name="baby_shower">Baby Shower</string>
             <string name="bachelor_party">Bachelor Party</string>
             <string name="bachelorette">bachelorette_party</string>
             <string name="barbeque">Barbeque</string>
             <string name="birthday_party_adults">Birthday Party (Adults)</string>
             <string name="birthday_party_kids">birthday_party (Kids)</string>
             <string name="Block_party">Block Party</string>
   			 <string name="number"># 1234</string>
   			 <string name="street">New York 27, 38, West side</string>
   			 <string name="city">USA</string>
   			 <string name="state">Palo Alto</string>
   			 <string name="country">USA</string>
              <string name="number_ans">No.</string>
   			 <string name="streetnumber_ans">Street</string>
   			 <string name="citynumber_ans">City</string>
   			 <string name="statenumber_ans">State</string>
   			 <string name="countrynumber_ans">Country</string>
   			 <string name="locationnumber_ans">Location</string>
</resources>