<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical"
    android:id="@+id/locationPopupLay">
    

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        
        <LinearLayout 
            android:id="@+id/linALyy1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textStyle="bold"
            android:textSize="19sp"
            
            />
        </LinearLayout>
        <TextView 
            android:id="@+id/numberView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/grayText"
          android:layout_toRightOf="@+id/linALyy1"
            android:textSize="17sp"
            android:singleLine="true"
            />
        
        
    </RelativeLayout>
    
    <TextView 
        
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_border"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        
        <LinearLayout 
            android:id="@+id/linALyy2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/streettt"
            android:textStyle="bold"
            android:textSize="18sp"
            
            />
        </LinearLayout>
        <TextView 
            android:id="@+id/streetView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street"
            android:textColor="@color/grayText"
          android:layout_toRightOf="@+id/linALyy2"
            android:textSize="17sp"
            android:singleLine="true"
            />
        
        
    </RelativeLayout>
    
    
    
    <TextView 
        
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_border"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        
        <LinearLayout 
            android:id="@+id/linALyy3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cityy"
            android:textStyle="bold"
            android:textSize="19sp"
            
            />
        </LinearLayout>
        <TextView 
            android:id="@+id/cityView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@color/grayText"
          android:layout_toRightOf="@+id/linALyy3"
            android:textSize="17sp"
            
            />
        
        
    </RelativeLayout>
    
    
    <TextView 
        
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_border"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        
        <LinearLayout 
            android:id="@+id/linALyy4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statee"
            android:textStyle="bold"
            android:textSize="19sp"
            
            />
        </LinearLayout>
        <TextView 
            android:id="@+id/stateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textColor="@color/grayText"
          android:layout_toRightOf="@+id/linALyy4"
            android:textSize="17sp"
            
            />
        
        
    </RelativeLayout>
    
    
    <TextView 
        
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_border"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        
        <LinearLayout 
            android:id="@+id/linALyy5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/countryy"
            android:textStyle="bold"
            android:textSize="19sp"
            
            />
        </LinearLayout>
        <TextView 
            android:id="@+id/countryView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/grayText"
          android:layout_toRightOf="@+id/linALyy5"
            android:textSize="17sp"
            
            />
        
        
    </RelativeLayout>
    
    
    <TextView 
        
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_border"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        
        <LinearLayout 
            android:id="@+id/linALyy6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationnn"
            android:textStyle="bold"
            android:textSize="19sp"
            
            />
        </LinearLayout>
        <ImageView 
            android:id="@+id/locationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          android:layout_toRightOf="@+id/linALyy6"
            android:background="@drawable/location"
            />
        
        
    </RelativeLayout>
    
    
</LinearLayout>
