<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
>
    

      <TextView 
          android:id="@+id/tttt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:visibility="invisible"
            />
      
    <TextView 
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
         android:layout_below="@+id/tttt"
        />

        <TextView 
        android:id="@+id/event_not_yet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_not_yet"
        android:layout_centerHorizontal="true"
     
        android:textSize="16sp"
        android:layout_below="@+id/message"
        android:layout_marginTop="8dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        />
    
        
        <Button 
            android:id="@+id/evenTypeNullBtn"
            android:layout_width="100dp"
            android:layout_height="39dp"
            android:text="@string/ok"
             android:layout_below="@+id/event_not_yet"
               android:layout_centerHorizontal="true"
                 android:layout_marginTop="16dp"
                 android:background="@color/orange_button"
                 android:textColor="@color/white"
                 android:layout_marginBottom="10dp"
            />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/evenTypeNullBtn"
            android:visibility="invisible"
            />
</RelativeLayout>
