<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/white">

    <com.calgiary.appenify.ActionBar
        android:id="@+id/abar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    

    <EditText
        android:id="@+id/serachbox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/abar1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:paddingLeft="8dp"
        android:layout_marginBottom="5dp"
        android:drawableRight="@drawable/search"
        android:background="@drawable/border_gray"
        android:hint="@string/enter_search"
    />

    <LinearLayout
        android:id="@+id/prefs"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_below="@+id/serachbox"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Spinner
            android:id="@+id/spinnerDay"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1.5"
            android:hint="@string/Today"
                android:spinnerMode="dropdown"
                
            android:paddingLeft="3dp"
              android:minHeight="40dip"  
            android:background="@drawable/dropdown_icon"
            android:drawableRight="@drawable/search"
            android:dropDownVerticalOffset="10dp" />

         <!-- android:spinnerStyle="@android:style/Widget.Spinner.DropDown" -->
         
        <EditText
            android:id="@+id/locwise"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
             android:layout_weight="1"
            android:paddingLeft="8dp"
            android:background="@drawable/border_gray"
            android:hint="@string/CurrentLocation"
            android:singleLine="true"
            android:imeOptions="actionDone" />
    </LinearLayout>

    <RelativeLayout 
        android:id="@+id/search_Layyy"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
         android:layout_below="@+id/prefs"
         android:padding="6dp"
         android:background="@color/orange_button"
         android:layout_alignParentRight="true"
         android:layout_marginRight="5dp"
         android:layout_marginTop="6dp"
         android:layout_marginBottom="6dp"
        >
        <ImageView 
            android:id="@+id/iiiiii"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:background="@drawable/tick_icon"
            android:padding="5dp"
            android:layout_marginRight="3dp"
            android:layout_centerVertical="true"
         android:paddingTop="3dp"
            />
    <TextView 
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        
      android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:layout_toRightOf="@+id/iiiiii"
        />
    
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/serach_res"
        android:layout_width="match_parent"
        android:layout_height="32dp"
       android:layout_below="@+id/search_Layyy"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:background="@drawable/border_corner_scale_orange1"
        android:layout_marginBottom="5dp" >

        <LinearLayout 
             android:id="@+id/bestLay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
               android:layout_weight="1"
                android:onClick="eventSearchFunction"
            >
        <TextView
            android:id="@+id/best"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
          
            android:background="#d94949"
            android:gravity="center"
            android:text="@string/BestMatch"
            android:textColor="#ffffff"
           
            android:textSize="15sp" />
</LinearLayout>

          <LinearLayout 
             android:id="@+id/favsLay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
               android:layout_weight="1"
                android:onClick="eventSearchFunction"
            >
          
        <TextView
            android:id="@+id/favs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/Favorites"
            android:textColor="#d94949"
           
            android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/content_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serach_res"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

</RelativeLayout>