<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="#ffffff"
   android:id="@+id/social_layoutt"
    >
    
    <RelativeLayout
         android:id="@+id/socialConnectPopUpContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">
    
    <TextView android:id="@+id/socialConnectPopUptext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:text="@string/socialConnect_popup_text1"/>
    
    <LinearLayout android:id="@+id/socialConnectpopUpButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
          android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
         android:orientation="horizontal"
        android:layout_centerHorizontal="true"
       android:layout_below="@+id/socialConnectPopUptext1">
        
        <Button android:id="@+id/socialConnectPopUpYES"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/yes"
            android:background="@color/gray"
            android:layout_marginRight="5dp"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="14sp"
            android:layout_weight="1.3"
            ></Button>
        
      
        
        <Button android:id="@+id/socialConnectPopUpOKConnect"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/ok_let_me"
            android:singleLine="true"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@color/orange_button"
            android:textColor="#ffffff"></Button>
        
        
        
    </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
