<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" 
    android:id="@+id/shareFriendLay">

    
    <ImageView 
        android:id="@+id/imgProfilePic"
        android:layout_width="100dp"
        android:layout_height="100dp"
    android:background="@drawable/ic_launcher"    
      android:visibility="gone"  />
    
   <RelativeLayout 
    android:id="@+id/topLayoutt_social1"
    android:layout_width="fill_parent"
	android:layout_height="55dp"
	android:background="#D94949"
    >
    
    <TextView 
        android:id="@+id/verifyNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/share_with_friends"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="22dp"
        android:layout_marginTop="5dp"
        />
    
     <ImageView 
        android:id="@+id/current_view_hint_center"
        android:layout_width="55dp"
        android:layout_height="9dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/verifyNumberText"
        android:layout_marginTop="8dp"
      android:layout_marginLeft="2dp"
        android:background="@drawable/top_hover"
        />
    
       <ImageView 
        android:id="@+id/current_view_hint_left"
        android:layout_width="55dp"
        android:layout_height="9dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/verifyNumberText"
        android:layout_marginTop="8dp"
         android:layout_marginRight="3dp"
        android:layout_toLeftOf="@+id/current_view_hint_center"
        android:background="@drawable/top_hover"
        />
       
         <ImageView 
        android:id="@+id/current_view_hint_right"
        android:layout_width="55dp"
        android:layout_height="9dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/verifyNumberText"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/current_view_hint_center"
        android:background="@drawable/top_hover"
        />
</RelativeLayout> 
           
    
    <TextView android:id="@+id/shareWithFriendsText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E81717"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/topLayoutt_social1"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:text="@string/you_are_almost_done"/>
    
    <TextView android:id="@+id/shareWithFriendsText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/shareWithFriendsText1"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textSize="13sp"
        
        android:text="@string/share_appenify_with"/>
    
    <View 
        android:id="@+id/shareWithFriendsView1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/grayText"
        android:layout_below="@+id/shareWithFriendsText2"/>
    
      <ListView android:id="@+id/shareWithFriendsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    
        android:listSelector="#00000000"
       android:layout_below="@+id/shareWithFriendsView1"
       android:layout_above="@+id/shareWithFriendsBottomButtonContainer"
        android:divider="@drawable/appenify_horizontal_line"
        android:dividerHeight="0.5dp">
          
      </ListView>
       
     
    <RelativeLayout 
        android:id="@+id/shareWithFriendsBottomButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#F2F1F0"
        >
        
        <Button
             android:id="@+id/shareWithFriendsSkipBotton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:text="@string/skip_this_step"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:layout_marginLeft="15dp"
            android:onClick="shareSkipFunction" />
     
        
        <Button 
            android:id="@+id/shareWithFriendsSharecontBotton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/share_continue"
            android:background="@color/orange_button"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
               android:paddingLeft="5dp"
               android:paddingRight="5dp"
            android:layout_marginRight="15dp"
            
            />
        <!-- android:onClick="shareSkipFunction" -->
 </RelativeLayout>
    
</RelativeLayout>

